--- a/meninamenina/views/pessoas/criar.ejs
+++ b/meninamenina/views/pessoas/criar.ejs
@@ -15,18 +15,19 @@
   
 
     <h1 >   Formulário   </h1>
-
+  
        <form class='formulario' method="post" action="/pessoas/adicionar" > 
-        <label>  Nome: </label>
-        <input type="text" name="nome" placeholder="Digite seu nome..."><br/><br/>
-   
+        <div class="center">   <label>  Nome: </label>
+        <input type="text" name="nome" placeholder="Digite seu nome..."><br/><br/> </div>
+     <div class="center">
         <label> Sobrenome: </label>
-        <input type="text" name="sobrenome" placeholder="Digite seu sobrenome..."><br/><br/>
-
+        <input type="text" name="sobrenome"  placeholder="Digite seu sobrenome..."><br/><br/>
+     </div>
+     <div class="center">
          <label >  Idade: </label>
         <input type="number" name="idade" placeholder="Insira sua idade..."><br/>
-
-        <input type="submit" value="Enviar">  
+     </div><br>
+     <div >  <input type="submit" value="Enviar"class="inputs2">  </div>
 
        
 
@@ -37,4 +38,6 @@
  
 </body>
 </html>
+
+
 
